<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isFavorite"
            type="java.lang.Boolean" />

        <variable
            name="obj"
            type="com.mcma.models.contacts.ContactEntityModel" />

        <variable
            name="presenter"
            type="com.mcma.modules.contacts.presenter.ContactPresenterImpl" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.mcma.modules.contacts.fragment.ContactDetailFragment">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true">

                    <ProgressBar
                        android:id="@+id/progressbar"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/itemImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true"
                        app:banner_pic="@{obj.profile_pic}"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="0.7" />
                </FrameLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay">

                    <ToggleButton
                        android:id="@+id/favorite"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="right|top"
                        android:layout_margin="25dp"
                        android:background="@drawable/check"
                        android:checked="@={obj.favorite}"
                        android:clickable="true"
                        android:onClick="@{() -> presenter.onContactUpdateClicked(obj)}"
                        android:textOff=""
                        android:textOn="" />
                </android.support.v7.widget.Toolbar>


            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:fitsSystemWindows="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:clickable="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin">

                    <ImageButton
                        android:id="@+id/ivmesage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:layout_weight="0.5"
                        android:onClick="@{() -> presenter.onContactSendMessageClick(obj.phone_number)}"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:src="@drawable/ic_message_black_24dp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/listDivider" />

                    <ImageButton
                        android:id="@+id/ivshare"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:onClick="@{() -> presenter.onContactShareContactClick(obj)}"
                        android:layout_weight="0.5"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:src="@drawable/ic_share_black_24dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/listDivider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="@{() -> presenter.onPlaceCallClick(obj.phone_number)}"
                    android:clickable="true"
                    android:padding="@dimen/activity_horizontal_margin">

                    <ImageView
                        android:id="@+id/ivContactItem1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:src="@drawable/ic_phone_black_24dp" />

                    <TextView
                        android:id="@+id/tvNumber1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_toEndOf="@id/ivContactItem1"
                        android:layout_toRightOf="@id/ivContactItem1"
                        android:text="@{obj.phone_number}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#212121" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvNumber1"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="8dp"
                        android:layout_toEndOf="@id/ivContactItem1"
                        android:layout_toRightOf="@id/ivContactItem1"
                        android:text="@string/home"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#727272" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/listDivider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="@{() -> presenter.onContactEmailClick(obj.email)}"
                    android:clickable="true"
                    android:padding="@dimen/activity_horizontal_margin">

                    <ImageView
                        android:id="@+id/ivContactItem3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:src="@drawable/ic_mail_black_24dp" />

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_toEndOf="@id/ivContactItem3"
                        android:layout_toRightOf="@id/ivContactItem3"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@{obj.email}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#212121" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvEmail"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="8dp"
                        android:layout_toEndOf="@id/ivContactItem3"
                        android:layout_toRightOf="@id/ivContactItem3"
                        android:text="@string/home"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#727272" />


                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/listDivider" />
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@drawable/ic_create_white_24dp" />

    </android.support.design.widget.CoordinatorLayout>
</layout>