...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/favorite_contact_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.30"
                    android:background="@null"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
...
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/contact_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.60"
                    android:background="@null"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
...
